[tool.poetry]
name = "dcs-test-work"
version = "0.1.0"
description = ""
authors = ["CuberHuber <romal5754@gmail.com>"]
readme = "README.md"
packages = [{include = "dcs_test_work"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
